--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,7 @@ djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-api-logger==1.1.12
 flake8==5.0.4
+gunicorn==20.0.4
 idna==3.4
 importlib-metadata==1.7.0
 isort==5.11.5
@@ -24,6 +25,7 @@ MarkupSafe==2.1.2
 mccabe==0.7.0
 oauthlib==3.2.2
 Pillow==9.4.0
+psycopg2-binary==2.9.*
 pycodestyle==2.9.1
 pycparser==2.21
 pyflakes==2.5.0
