--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,20 @@
 server {
     listen 80;
+    server_tokens off;
+    server_name localhost, 127.0.0.1;
+
+    location /backend_static/admin/ {
+        root /var/html/;
+    }
+
+    location /backend_static/rest_framework/ {
+        root /var/html/;
+    }
+
+    location /media/ {
+        root /var/html/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -17,5 +32,21 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
+
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_pass http://backend:8000/api/;
+    }
+
+    location /admin/ {
+        proxy_set_header        Host $host;
+        # proxy_set_header        X-Real-IP $remote_addr;
+        # proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_pass http://backend:8000/admin/;
+    }
 
 }
