--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -3,11 +3,7 @@ server {
     server_tokens off;
     server_name localhost, 127.0.0.1;
 
-    location /backend_static/admin/ {
-        root /var/html/;
-    }
-
-    location /backend_static/rest_framework/ {
+    location /backend_static/ {
         root /var/html/;
     }
 
@@ -43,9 +39,6 @@ server {
 
     location /admin/ {
         proxy_set_header        Host $host;
-        # proxy_set_header        X-Real-IP $remote_addr;
-        # proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header        X-Forwarded-Proto $scheme;
         proxy_pass http://backend:8000/admin/;
     }
 
