--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,8 +2,9 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY . .
+COPY requirements.txt .
 RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt --no-cache-dir
+COPY . .
 
 CMD ["gunicorn", "--capture-output", "foodgram.wsgi:application", "--bind", "0:8000" ]
