--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY ./requirements.txt .
 RUN pip3 install --upgrade pip
-RUN pip3 install -r requirements.txt --no-cache-dir
+RUN pip3 install -r /app/requirements.txt --no-cache-dir
 COPY . .
 
 CMD ["gunicorn", "--capture-output", "foodgram.wsgi:application", "--bind", "0:8000" ]
