--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -84,6 +84,8 @@ jobs:
           echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+          sudo apt-get remove openssh-client openssh-server
+          sudo apt-get install openssh-client openssh-server
           sudo docker-compose up -d
           sudo docker-compose exec manage.py migrate
           docker-compose exec web python manage.py collectstatic --no-input
