--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -74,7 +74,7 @@ jobs:
         script: |
           sudo systemctl stop nginx
           sudo docker-compose stop
-          sudo docker-compose rm web
+          sudo docker-compose rm backend
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
           touch .env
           echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" > .env
