--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -88,7 +88,7 @@ jobs:
           # sudo apt-get install openssh-client openssh-server
           sudo docker-compose up -d
           sudo docker-compose exec manage.py migrate
-          docker-compose exec web python manage.py collectstatic --no-input
+          sudo docker-compose exec web python manage.py collectstatic --no-input
 
   send_message:
     runs-on: ubuntu-latest
