--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -26,10 +26,10 @@ services:
 
   frontend:
     container_name: foodgram_frontend
-    # build:
-    #   context: ../frontend
-    #   dockerfile: Dockerfile
-    image: alexandryp/foodgram_frontend:latest
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
+    # image: alexandryp/foodgram_frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
